kubernetes/doc-home-cluster/apps/selfhosted/ollama/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ollama
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ollama
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
        - matchLabels:
            app.kubernetes.io/name: home-assistant
            k8s:io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
